# install

./: C.g4  C.interp  CBaseListener.cpp  CBaseListener.h  CBaseVisitor.cpp  CBaseVisitor.h  CLexer.cpp  CLexer.h  CLexer.interp  CListener.cpp  CListener.h  CMakeLists.txt  CParser.cpp  CParser.h  CVisitor.cpp  CVisitor.h  MyCompiler  MyCompiler.cpp  README.md  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYParser.cpp  SysYParser.h  SysYVisitor.h  main.cpp  simple.c
.antlr/: C.interp  CBaseListener.java  CLexer.java  CLexer.tokens  CListener.java  CParser.java  Scene.interp  SceneLexer.interp  SceneLexer.java  SceneParser.java  literals.interp  literals.java  literals.tokens  tokens.java
local/lib/: libantlr4-runtime.so.4.13.1
src/: README.md  main.cpp
src/frontend/: SysYBaseVisitor.cpp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYParser.cpp  SysYParser.h  SysYVisitor.cpp  SysYVisitor.h
src/frontend/.antlr/: SysYLexer.java  SysYParser.java  tokens.java  tokens.tokens
test/: simple.c
